[gd_scene load_steps=2 format=3 uid="uid://bbn0fj7kcwnri"]

[ext_resource type="Script" path="res://game/entities/components/health_component/health_component.gd" id="1_4iu1o"]

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_4iu1o")

[node name="HpRegenTimer" type="Timer" parent="."]
autostart = true

[node name="HpRegenCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="HpRegenTimer" to="." method="_on_hp_regen_timer_timeout"]
[connection signal="timeout" from="HpRegenCooldownTimer" to="." method="_on_hp_regen_cooldown_timer_timeout"]
